--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,114 @@
+
+ *{
+  box-sizing: border-box;
+  margin: 0;padding: 0;
+  font-family: sans-serif;
+}
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #6983aa;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
+  height: 100vh;
+  width: 100vw;
+}
+.center_div{
+  background-color: #fff;
+  height: 70vh;
+  width: 25%;
+  /* position: absolute;
+  top: 15vh;
+  left: 33vw; */
+  box-shadow: 5px 5px 25px -5px rgba(0, 0, 0,0.5);
+  border-radius: 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.head_div{
+  background-color: #a46be1;
+  color: #fff;
+  text-align: center;
+  padding: 6px 0 2px 0;
+  margin-bottom: 10px;
+  box-shadow: 5px 5px 15px -5px rgbs(0,0,0,0.3);
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+ input{
+
+ 
+  width: 140px;
+  height: 30px;
+  font-size: 20px;
+  top: 10px;
+  border: none;
+  background: transparent;
+  font-weight: 500;
+  outline: none;
+  text-align: center;
+  border-bottom:2px solid  #8566aa;
+}
+ button{
+  min-height: 40px;
+  width: 40px;
+border-color: transparent;
+  margin-left:  12px;
+  border-radius: 50%;
+  background-color: #8566aa;
+  font-size: 40px;
+  font-weight: bold;
+  color: #fff;
+  border: none;
+  outline: none;
+  box-shadow: 5px 5px 15px -5px rgbs(0,0,0,0.3);
+}
+
+button:hover{
+  background-color: #20bf6b;
+}
+
+ol{
+  margin-top: 30px;
+}
+
+ol li{
+padding-left: 0px;
+text-align: left;
+font-size: 20px;
+font-weight: 500;
+min-height: 40px;
+display: flex;
+align-items: center;
+color: #8566aa;
+text-transform: capitalize;
+}
+
+.todo_style{
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  align-items: center;
+}
+
+.todo_style .fa-times{
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #8566aa;
+  border-radius: 50%;
+  margin: 0 15px 0 35px;
+  color: aliceblue;
+  box-shadow: 5px 5px 15px -5px rgbs(0,0,0,0.3);
+}
+
+.fa-times:hover{
+  background-color: crimson;
+}
+
+ .fa-times:hover .list_style{
+  color: crimson;
 }
